tests-integration/fixtures/checking/1778051580_match_type_semantics/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
isEq ::
  forall (@a :: Type) (@b :: Type) (@o :: Type).
    IsEq (a :: Type) (b :: Type) (o :: Type) => (a :: Type) -> (b :: Type) -> (o :: Type)
Unit :: Unit
Output :: Output
testEqConcrete :: Output
testSkolemRight :: forall (x :: Type). (x :: Type) -> Output
testSkolemLeft :: forall (x :: Type). (x :: Type) -> Output
testSkolemIsEq :: forall (x :: Type) (y :: Type). (x :: Type) -> (y :: Type) -> Output
typeEquals ::
  forall (t :: Type) (@a :: (t :: Type)) (@b :: (t :: Type)).
    TypeEquals @(t :: Type) (a :: (t :: Type)) (b :: (t :: Type)) => Unit
testOpenRows :: Unit
rowSame ::
  forall (k :: Type) (@a :: (k :: Type)) (@b :: (k :: Type)).
    RowSame @(k :: Type) (a :: (k :: Type)) (b :: (k :: Type)) => Unit
testOpenRowsNoFd :: Unit

Types
IsEq :: Type -> Type -> Type -> Constraint
Unit :: Type
Output :: Type
TypeEquals :: forall (k :: Type). (k :: Type) -> (k :: Type) -> Constraint
RowSame :: forall (k :: Type). (k :: Type) -> (k :: Type) -> Constraint

Classes
class forall (a :: Type) (b :: Type) (o :: Type). IsEq (a :: Type) (b :: Type) (o :: Type)
  isEq ::
  forall (@a :: Type) (@b :: Type) (@o :: Type).
    IsEq (a :: Type) (b :: Type) (o :: Type) => (a :: Type) -> (b :: Type) -> (o :: Type)
class forall (k :: Type) (a :: (k :: Type)) (b :: (k :: Type)). TypeEquals @(k :: Type) (a :: (k :: Type)) (b :: (k :: Type))
class forall (k :: Type) (a :: (k :: Type)) (b :: (k :: Type)). RowSame @(k :: Type) (a :: (k :: Type)) (b :: (k :: Type))
  rowSame ::
  forall (k :: Type) (@a :: (k :: Type)) (@b :: (k :: Type)).
    RowSame @(k :: Type) (a :: (k :: Type)) (b :: (k :: Type)) => Unit

Instances
instance forall (t :: Type). IsEq (t :: Type) (t :: Type) Output
instance forall (t :: Type) (t1 :: Type). IsEq (t :: Type) (t1 :: Type) Output
instance forall (t :: Type) (t1 :: (t :: Type)).
  TypeEquals @(t :: Type) (t1 :: (t :: Type)) (t1 :: (t :: Type))
instance forall (t :: Type) (t1 :: (t :: Type)). RowSame @(t :: Type) (t1 :: (t :: Type)) (t1 :: (t :: Type))

Roles
Unit = []
Output = []

Diagnostics
error[NoInstanceFound]: No instance found for: IsEq (x :: Type) Unit Output
  --> 17:1..17:41
   |
17 | testSkolemRight :: forall x. x -> Output
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: IsEq Unit (x1 :: Type) Output
  --> 20:1..20:40
   |
20 | testSkolemLeft :: forall x. x -> Output
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: IsEq (y :: Type) (x2 :: Type) Output
  --> 23:1..23:47
   |
23 | testSkolemIsEq :: forall x y. x -> y -> Output
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: RowSame @Type { params :: Unit | ?47 } { query :: Unit | ?50 }
  --> 44:1..44:25
   |
44 | testOpenRowsNoFd :: Unit
   | ^~~~~~~~~~~~~~~~~~~~~~~~
